--- a/styles/_mixes-fonts.scss
+++ b/styles/_mixes-fonts.scss
@@ -1,28 +1,3 @@
-.link {
-  transition: opacity 0.2s linear;
-}
-
-.link:hover {
-  opacity: 0.7;
-}
-
-.link:active {
-  text-decoration: underline;
-  opacity: 1;
-}
-
-.btn {
-  transition: opacity 0.2s linear scale 0.1s ease;
-}
-
-.btn:hover {
-  opacity: 0.8;
-}
-
-.btn:active {
-  scale: 0.99;
-}
-
 .font-h1 {
   font-weight: 500;
   font-size: 70px;
@@ -48,23 +23,26 @@
   font-size: 20px;
 }
 
-.font-18 {
+@mixin font-18($color: var(--white))  {
   font-weight: 500;
   font-size: 18px;
   line-height: 130%;
   font-style: normal;
-  color: var(--white);
+  color: $color;
 }
 
-.font-16 {
+@mixin font-16($color: var(--black)) {
   font-weight: 500;
   font-size: 16px;
   line-height: 140%;
   font-style: normal;
-  color: var(--black);
+  color: $color;
 }
 
-.small-text {
+@mixin small-text($color: var(--white)) {
+  color: $color;
   font-weight: 500;
   font-size: 14px;
+  font-style: normal;
+  line-height: 140%;
 }
