--- a/css/index.css
+++ b/css/index.css
@@ -401,11 +401,6 @@ template {
   font-size: 24px;
 }
 
-.font-20 {
-  font-weight: 500;
-  font-size: 20px;
-}
-
 .link {
   transition: opacity 0.2s linear;
 }
@@ -456,11 +451,6 @@ template {
 .font-h4 {
   font-weight: 600;
   font-size: 24px;
-}
-
-.font-20 {
-  font-weight: 500;
-  font-size: 20px;
 }
 
 .link {
@@ -731,6 +721,58 @@ template {
   background-image: url(../../assets/icons/header-icon/location-icon.svg);
 }
 
+.font-h1 {
+  font-weight: 500;
+  font-size: 70px;
+}
+
+.font-h2 {
+  font-weight: 500;
+  font-size: 50px;
+}
+
+.font-h3 {
+  font-weight: 600;
+  font-size: 38px;
+}
+
+.font-h4 {
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.link {
+  transition: opacity 0.2s linear;
+}
+
+.link:hover {
+  opacity: 0.7;
+}
+
+.link:active {
+  text-decoration: underline;
+  opacity: 1;
+}
+
+.btn {
+  transition: opacity 0.2s linear scale 0.1s ease;
+}
+
+.btn:hover {
+  opacity: 0.8;
+}
+
+.btn:active {
+  scale: 0.99;
+}
+
+.logo {
+  display: block;
+  margin: 0;
+  width: 80px;
+  height: 80px;
+}
+
 .footer {
   max-width: 1560px;
   margin: 0 auto 50px;
@@ -744,6 +786,115 @@ template {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+}
+.footer__column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+.footer__column_first {
+  min-height: 374px;
+}
+.footer__column_second {
+  min-height: 360px;
+}
+.footer__column_third {
+  justify-content: flex-start;
+}
+.footer__column_fourth {
+  justify-content: flex-start;
+}
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 12px;
+  flex-wrap: wrap;
+  max-height: 340px;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+}
+.footer__list-element {
+  display: inline-block;
+  max-width: 400px;
+}
+.footer__text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 140%;
+  font-style: normal;
+  color: var(--dark-grey);
+}
+.footer__text-with-icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+.footer__text-with-icon::before {
+  content: "";
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+.footer__text-with-icon_rate::before {
+  background-image: url(../../assets/icons/footer-icon/star-icon.svg);
+}
+.footer__column-title {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%; /* 24px */
+  color: var(--black);
+}
+.footer__logo-container {
+  margin-left: 25px;
+  margin-top: 22px;
+}
+.footer__group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+.footer__group-contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+.footer__group-rate {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+.footer__btn-msg-dir {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 140%;
+  font-style: normal;
+  color: var(--black);
+  padding: 13px 23px;
+  box-sizing: border-box;
+  border-radius: 15px;
+  border: 1px solid var(--dark-grey);
+  box-shadow: 10px 15px 50px 0px rgba(173, 178, 201, 0.2);
 }
 .footer__signature {
   padding: 25px 0;
