--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,4 +8,6 @@
   --white: #fff;
   --blace: #3b3c40;
   --dark-grey: #9293b0;
+  --purple-light: #F3EFFF;
+  --button-gradient: linear-gradient(96deg, #DD3197 0%, #822FAF 101.4%);
 }
