--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,4 +5,9 @@
 @import 'mixes';
 
 @import '../blocks/header/header';
+@import '../blocks/main/main';
+@import '../blocks/group-links-category/group-links-category';
+@import '../blocks//text-with-icon/text-with-icon';
+@import '../blocks/main/section';
+@import '../blocks/main/service';
 @import '../blocks/footer/footer';
