--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,13 +1,13 @@
 @import 'my-reset';
 @import 'normalize';
-@import url(../assets/fonts/Euclid_Circular_A/stylesheet.css);
+@import '../assets/fonts/Euclid_Circular_A/stylesheet.css';
 @import 'variables';
 @import 'mixes';
 
-@import '../blocks/header/header';
-@import '../blocks/main/main';
-@import '../blocks/group-links-category/group-links-category';
-@import '../blocks//text-with-icon/text-with-icon';
-@import '../blocks/main/section';
-@import '../blocks/main/service';
-@import '../blocks/footer/footer';
+@import '../blocks/header';
+@import '../blocks/main';
+@import '../blocks/text-with-icon';
+@import '../blocks/section';
+@import '../blocks/service';
+@import '../blocks/popular';
+@import '../blocks/footer';
