--- a/css/index.css
+++ b/css/index.css
@@ -517,8 +517,10 @@ template {
   min-width: 120px;
 }
 .header__searcher-btn {
-  min-width: 50px;
-  min-height: 50px;
+  max-width: 50px;
+  max-height: 50px;
+  height: 100%;
+  width: 100%;
   border-radius: 10px;
   background-repeat: no-repeat;
   background-position: center;
@@ -656,7 +658,7 @@ template {
   background-image: url(../../assets/icons/header-icon/email-icon.svg);
 }
 .text-with-icon_profile::before {
-  background-image: url(../../assets/icons/header-icon/profile-icon.svg);
+  background-image: url(../../assets/icons/shared-icon/profile-icon.svg);
 }
 .text-with-icon_favorite::before {
   background-image: url(../../assets/icons/header-icon/favorite-icon.svg);
@@ -697,6 +699,44 @@ template {
 
 .section {
   width: 100%;
+}
+.section_form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+  flex-wrap: wrap;
+  border-radius: 50px;
+  border: 2px solid var(--purple-light);
+  background: var(--purple-light);
+}
+.section__img-container {
+  max-width: 650px;
+  max-height: 497px;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  position: relative;
+}
+.section__img-container::after {
+  content: "";
+  position: absolute;
+  right: -103px;
+  bottom: 0;
+  top: 0;
+  left: 0px;
+  z-index: 1;
+  border-radius: 40px;
+  background: linear-gradient(303deg, rgba(255, 255, 255, 0.27) 26.33%, #FDFCFF 50.99%);
+}
+.section__img {
+  display: block;
+  margin: 0;
+  border-radius: 50px;
+  position: relative;
+  z-index: 2;
+  filter: drop-shadow(12px 25px 54px rgba(126, 117, 178, 0.25));
 }
 .section__card-list {
   display: grid;
@@ -756,6 +796,26 @@ template {
   background-size: contain;
   margin-left: 25px;
   background-image: url(../../assets/icons/shared-icon/btn-arrow-icon.svg);
+}
+.section__content-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(173px, 375px));
+  grid-template-rows: minmax(262px, 422px);
+  justify-content: center;
+  gap: 20px;
+}
+@media screen and (max-width: 1700px) {
+  .section__content-list_discounts {
+    grid-template-rows: repeat(2, minmax(262px, 422px));
+  }
+}
+@media screen and (max-width: 860px) {
+  .section__content-list_discounts {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, 262px);
+    -moz-column-gap: 9px;
+         column-gap: 9px;
+  }
 }
 
 .service {
@@ -879,7 +939,7 @@ template {
     grid-template-rows: repeat(2, minmax(260px, 387px));
   }
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 860px) {
   .popular__group-subcategory {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(2, 260px);
@@ -896,7 +956,7 @@ template {
   padding: 15px;
   border-radius: 30px;
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 860px) {
   .popular__group-subcategory-element {
     background-position: center;
     background-size: cover;
@@ -930,7 +990,7 @@ template {
   -webkit-backdrop-filter: blur(6px);
           backdrop-filter: blur(6px);
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 860px) {
   .popular__subcategory-btn {
     padding: 10px;
     gap: 2px;
@@ -955,7 +1015,7 @@ template {
   line-height: 120%; /* 24px */
   color: var(--black);
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 860px) {
   .popular__subcategory-title {
     font-size: 15px;
   }
@@ -971,7 +1031,7 @@ template {
 .popular__text_opacity {
   opacity: 0.6;
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 860px) {
   .popular__text_opacity {
     font-size: 14px;
   }
@@ -990,6 +1050,332 @@ template {
   background-size: contain;
   margin-right: 5px;
   background-image: url(../../assets/icons/header-icon/flame-icon.svg);
+}
+
+.product-card {
+  position: relative;
+  height: 100%;
+}
+.product-card__layout {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  gap: 0;
+  flex-wrap: wrap;
+  height: 100%;
+  padding: 25px;
+  box-sizing: border-box;
+  position: relative;
+  background-color: var(--white);
+  -webkit-clip-path: polygon(100% 7.109%, 100% 7.109%, 99.9295% 6.1614%, 99.7177% 5.2306%, 99.3673% 4.3334%, 98.8847% 3.4861%, 98.2792% 2.7036%, 97.5622% 1.9994%, 96.7465% 1.3858%, 95.8462% 0.874%, 94.8772% 0.4736%, 93.8565% 0.1924%, 92.8025% 0.0354%, 91.7343% 0%, 90.6649% 0%, 83.1784% 0%, 82.109% 0%, 71.4141% 0%, 70.3446% 0%, 59.6497% 0%, 58.5802% 0%, 47.8854% 0%, 46.8159% 0%, 36.121% 0%, 35.0515% 0%, 25.4261% 0%, 24.3566% 0%, 13.6618% 0%, 12.5923% 0%, 7.2459% 0.0312%, 6.1909% 0.1825%, 5.1683% 0.4582%, 4.1965% 0.8533%, 3.2928% 1.3603%, 2.4729% 1.9694%, 1.7511% 2.6698%, 1.1403% 3.449%, 0.6519% 4.2937%, 0.2952% 5.1889%, 0.077% 6.1186%, 0.0001% 7.0658%, 0% 8.0162%, 0% 8.9665%, 0% 31.7755%, 0% 32.7259%, 0% 72.6416%, 0% 73.5919%, 0.0338% 93.5488%, 0.2023% 94.4866%, 0.5108% 95.3959%, 0.9537% 96.2601%, 1.5226% 97.064%, 2.2067% 97.7936%, 2.9936% 98.4362%, 3.8695% 98.9804%, 4.8192% 99.4159%, 5.8259% 99.7343%, 6.8717% 99.9298%, 7.9375% 99.9998%, 9.007% 100%, 10.0765% 100%, 74.2438% 99.9545%, 75.2953% 99.7846%, 76.3116% 99.4911%, 77.2744% 99.079%, 78.1667% 98.5563%, 78.973% 97.9331%, 79.6793% 97.2203%, 80.2728% 96.4306%, 80.7424% 95.5775%, 81.079% 94.6762%, 81.2765% 93.7429%, 81.3333% 92.7945%, 81.3333% 91.8441%, 81.3594% 89.944%, 81.5158% 89.0046%, 81.8125% 88.0923%, 82.2443% 87.2236%, 82.8029% 86.414%, 83.4776% 85.6775%, 84.2563% 85.0271%, 85.1252% 84.4742%, 86.0692% 84.0291%, 87.0718% 83.7004%, 88.115% 83.4942%, 89.1798% 83.4136%, 90.2493% 83.4123%, 91.3188% 83.4123%, 92.3882% 83.4041%, 93.4499% 83.2958%, 94.4858% 83.0625%, 95.477% 82.7076%, 96.4059% 82.238%, 97.2562% 81.6627%, 98.0132% 80.9923%, 98.6635% 80.2387%, 99.195% 79.4149%, 99.5978% 78.5352%, 99.864% 77.6155%, 99.9894% 76.6724%, 100% 75.7222%, 100% 74.7718%);
+          clip-path: polygon(100% 7.109%, 100% 7.109%, 99.9295% 6.1614%, 99.7177% 5.2306%, 99.3673% 4.3334%, 98.8847% 3.4861%, 98.2792% 2.7036%, 97.5622% 1.9994%, 96.7465% 1.3858%, 95.8462% 0.874%, 94.8772% 0.4736%, 93.8565% 0.1924%, 92.8025% 0.0354%, 91.7343% 0%, 90.6649% 0%, 83.1784% 0%, 82.109% 0%, 71.4141% 0%, 70.3446% 0%, 59.6497% 0%, 58.5802% 0%, 47.8854% 0%, 46.8159% 0%, 36.121% 0%, 35.0515% 0%, 25.4261% 0%, 24.3566% 0%, 13.6618% 0%, 12.5923% 0%, 7.2459% 0.0312%, 6.1909% 0.1825%, 5.1683% 0.4582%, 4.1965% 0.8533%, 3.2928% 1.3603%, 2.4729% 1.9694%, 1.7511% 2.6698%, 1.1403% 3.449%, 0.6519% 4.2937%, 0.2952% 5.1889%, 0.077% 6.1186%, 0.0001% 7.0658%, 0% 8.0162%, 0% 8.9665%, 0% 31.7755%, 0% 32.7259%, 0% 72.6416%, 0% 73.5919%, 0.0338% 93.5488%, 0.2023% 94.4866%, 0.5108% 95.3959%, 0.9537% 96.2601%, 1.5226% 97.064%, 2.2067% 97.7936%, 2.9936% 98.4362%, 3.8695% 98.9804%, 4.8192% 99.4159%, 5.8259% 99.7343%, 6.8717% 99.9298%, 7.9375% 99.9998%, 9.007% 100%, 10.0765% 100%, 74.2438% 99.9545%, 75.2953% 99.7846%, 76.3116% 99.4911%, 77.2744% 99.079%, 78.1667% 98.5563%, 78.973% 97.9331%, 79.6793% 97.2203%, 80.2728% 96.4306%, 80.7424% 95.5775%, 81.079% 94.6762%, 81.2765% 93.7429%, 81.3333% 92.7945%, 81.3333% 91.8441%, 81.3594% 89.944%, 81.5158% 89.0046%, 81.8125% 88.0923%, 82.2443% 87.2236%, 82.8029% 86.414%, 83.4776% 85.6775%, 84.2563% 85.0271%, 85.1252% 84.4742%, 86.0692% 84.0291%, 87.0718% 83.7004%, 88.115% 83.4942%, 89.1798% 83.4136%, 90.2493% 83.4123%, 91.3188% 83.4123%, 92.3882% 83.4041%, 93.4499% 83.2958%, 94.4858% 83.0625%, 95.477% 82.7076%, 96.4059% 82.238%, 97.2562% 81.6627%, 98.0132% 80.9923%, 98.6635% 80.2387%, 99.195% 79.4149%, 99.5978% 78.5352%, 99.864% 77.6155%, 99.9894% 76.6724%, 100% 75.7222%, 100% 74.7718%);
+}
+@media screen and (max-width: 860px) {
+  .product-card__layout {
+    padding: 10px 10px 8px 10px;
+    -webkit-clip-path: polygon(100% 5.7252%, 100% 5.7252%, 99.6927% 4.2092%, 98.7859% 2.8018%, 97.3468% 1.6032%, 95.4803% 0.6975%, 93.3168% 0.1511%, 91.0111% 0%, 88.6878% 0%, 86.3645% 0%, 84.0411% 0%, 81.7178% 0%, 79.3945% 0%, 77.0712% 0%, 74.7479% 0%, 72.4246% 0%, 70.1012% 0%, 67.7779% 0%, 65.4546% 0%, 63.1313% 0%, 60.808% 0%, 58.4847% 0%, 56.1613% 0%, 53.838% 0%, 51.5147% 0%, 49.1914% 0%, 46.8681% 0%, 44.5448% 0%, 42.2214% 0%, 39.8981% 0%, 37.5748% 0%, 35.2515% 0%, 32.9282% 0%, 30.6049% 0%, 28.2815% 0%, 25.9582% 0%, 23.6349% 0%, 21.3116% 0%, 18.9883% 0%, 16.665% 0%, 14.3416% 0%, 12.0183% 0%, 9.695% 0%, 7.3764% 0.0633%, 5.1525% 0.4909%, 3.1807% 1.2935%, 1.5994% 2.4112%, 0.5215% 3.765%, 0.0283% 5.2594%, 0% 6.793%, 0% 8.3271%, 0% 9.8612%, 0% 11.3953%, 0% 12.9294%, 0% 14.4635%, 0% 15.9976%, 0% 17.5317%, 0% 19.0658%, 0% 20.5999%, 0% 22.134%, 0% 23.6681%, 0% 25.2022%, 0% 26.7363%, 0% 28.2704%, 0% 29.8045%, 0% 31.3386%, 0% 32.8727%, 0% 34.4068%, 0% 35.9409%, 0% 37.475%, 0% 39.0091%, 0% 40.5432%, 0% 42.0773%, 0% 43.6114%, 0% 45.1455%, 0% 46.6796%, 0% 48.2137%, 0% 49.7478%, 0% 51.2819%, 0% 52.816%, 0% 54.3501%, 0% 55.8842%, 0% 57.4183%, 0% 58.9524%, 0% 60.4865%, 0% 62.0206%, 0% 63.5547%, 0% 65.0888%, 0% 66.6229%, 0% 68.157%, 0% 69.6911%, 0% 71.2252%, 0% 72.7593%, 0% 74.2934%, 0% 75.8275%, 0% 77.3615%, 0% 78.8957%, 0% 80.4298%, 0% 81.9638%, 0% 83.4979%, 0% 85.032%, 0% 86.5661%, 0% 88.1002%, 0% 89.6343%, 0% 91.1684%, 0% 92.7025%, 0% 94.2366%, 0.2922% 95.754%, 1.1847% 97.1653%, 2.6117% 98.3702%, 4.4691% 99.2841%, 6.6269% 99.84%, 8.9311% 100%, 11.2544% 100%, 64.6877% 99.954%, 66.9255% 99.5593%, 68.9237% 98.7856%, 70.5419% 97.6912%, 71.665% 96.3535%, 72.2085% 94.8668%, 72.2543% 93.3337%, 72.2543% 91.7996%, 72.2599% 87.1973%, 72.6501% 85.6897%, 73.6338% 84.305%, 75.1374% 83.1415%, 77.0523% 82.2808%, 79.2444% 81.7869%, 81.5572% 81.6794%, 83.8805% 81.6794%, 93.1601% 81.5515%, 95.3386% 81.0319%, 97.2301% 80.149%, 98.7025% 78.9682%, 99.6488% 77.5722%, 99.9985% 76.0602%, 100% 74.5262%, 100% 72.9921%, 100% 71.458%, 100% 69.9239%);
+            clip-path: polygon(100% 5.7252%, 100% 5.7252%, 99.6927% 4.2092%, 98.7859% 2.8018%, 97.3468% 1.6032%, 95.4803% 0.6975%, 93.3168% 0.1511%, 91.0111% 0%, 88.6878% 0%, 86.3645% 0%, 84.0411% 0%, 81.7178% 0%, 79.3945% 0%, 77.0712% 0%, 74.7479% 0%, 72.4246% 0%, 70.1012% 0%, 67.7779% 0%, 65.4546% 0%, 63.1313% 0%, 60.808% 0%, 58.4847% 0%, 56.1613% 0%, 53.838% 0%, 51.5147% 0%, 49.1914% 0%, 46.8681% 0%, 44.5448% 0%, 42.2214% 0%, 39.8981% 0%, 37.5748% 0%, 35.2515% 0%, 32.9282% 0%, 30.6049% 0%, 28.2815% 0%, 25.9582% 0%, 23.6349% 0%, 21.3116% 0%, 18.9883% 0%, 16.665% 0%, 14.3416% 0%, 12.0183% 0%, 9.695% 0%, 7.3764% 0.0633%, 5.1525% 0.4909%, 3.1807% 1.2935%, 1.5994% 2.4112%, 0.5215% 3.765%, 0.0283% 5.2594%, 0% 6.793%, 0% 8.3271%, 0% 9.8612%, 0% 11.3953%, 0% 12.9294%, 0% 14.4635%, 0% 15.9976%, 0% 17.5317%, 0% 19.0658%, 0% 20.5999%, 0% 22.134%, 0% 23.6681%, 0% 25.2022%, 0% 26.7363%, 0% 28.2704%, 0% 29.8045%, 0% 31.3386%, 0% 32.8727%, 0% 34.4068%, 0% 35.9409%, 0% 37.475%, 0% 39.0091%, 0% 40.5432%, 0% 42.0773%, 0% 43.6114%, 0% 45.1455%, 0% 46.6796%, 0% 48.2137%, 0% 49.7478%, 0% 51.2819%, 0% 52.816%, 0% 54.3501%, 0% 55.8842%, 0% 57.4183%, 0% 58.9524%, 0% 60.4865%, 0% 62.0206%, 0% 63.5547%, 0% 65.0888%, 0% 66.6229%, 0% 68.157%, 0% 69.6911%, 0% 71.2252%, 0% 72.7593%, 0% 74.2934%, 0% 75.8275%, 0% 77.3615%, 0% 78.8957%, 0% 80.4298%, 0% 81.9638%, 0% 83.4979%, 0% 85.032%, 0% 86.5661%, 0% 88.1002%, 0% 89.6343%, 0% 91.1684%, 0% 92.7025%, 0% 94.2366%, 0.2922% 95.754%, 1.1847% 97.1653%, 2.6117% 98.3702%, 4.4691% 99.2841%, 6.6269% 99.84%, 8.9311% 100%, 11.2544% 100%, 64.6877% 99.954%, 66.9255% 99.5593%, 68.9237% 98.7856%, 70.5419% 97.6912%, 71.665% 96.3535%, 72.2085% 94.8668%, 72.2543% 93.3337%, 72.2543% 91.7996%, 72.2599% 87.1973%, 72.6501% 85.6897%, 73.6338% 84.305%, 75.1374% 83.1415%, 77.0523% 82.2808%, 79.2444% 81.7869%, 81.5572% 81.6794%, 83.8805% 81.6794%, 93.1601% 81.5515%, 95.3386% 81.0319%, 97.2301% 80.149%, 98.7025% 78.9682%, 99.6488% 77.5722%, 99.9985% 76.0602%, 100% 74.5262%, 100% 72.9921%, 100% 71.458%, 100% 69.9239%);
+  }
+}
+.product-card__shadow {
+  filter: drop-shadow(5px 15px 70px rgba(173, 178, 201, 0.35));
+  height: 100%;
+  width: 100%;
+}
+.product-card__img-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 15px;
+  flex-wrap: wrap;
+  padding: 32px;
+  flex-grow: 4;
+  position: relative;
+  margin-bottom: 20px;
+  border-radius: 30px;
+  border: 2px solid var(--grey);
+  box-sizing: border-box;
+}
+@media screen and (max-width: 860px) {
+  .product-card__img-box {
+    padding: 10px 10px 8px 10px;
+    border-radius: 10px;
+    border: 1px solid var(--grey);
+    margin-bottom: 8px;
+    padding: 0;
+  }
+}
+.product-card__label {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 140%;
+  font-style: normal;
+  color: var(--white);
+  display: block;
+  padding: 6px 14px;
+  border-radius: 15px;
+  background: var(--pink);
+  position: absolute;
+  top: 15px;
+  left: 15px;
+}
+@media screen and (max-width: 860px) {
+  .product-card__label {
+    padding: 1px 8px;
+    border-radius: 20px;
+    font-size: 12px;
+    top: 5px;
+    left: 5px;
+  }
+}
+.product-card__img {
+  display: block;
+  max-width: 105px;
+  width: 100%;
+  max-height: 124px;
+  height: 100%;
+}
+@media screen and (max-width: 860px) {
+  .product-card__img {
+    max-width: 74px;
+    max-height: 86px;
+  }
+}
+.product-card__title {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%; /* 24px */
+  color: var(--black);
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  margin-bottom: 10px;
+}
+@media screen and (max-width: 860px) {
+  .product-card__title {
+    font-size: 14px;
+    line-height: 130%;
+    margin-bottom: 4px;
+  }
+}
+.product-card__tth-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin-bottom: 25px;
+}
+@media screen and (max-width: 860px) {
+  .product-card__tth-list {
+    margin-bottom: 8px;
+  }
+}
+.product-card__tth-element {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 140%;
+  font-style: normal;
+  color: var(--dark-grey);
+}
+@media screen and (max-width: 860px) {
+  .product-card__tth-element {
+    font-size: 12px;
+  }
+}
+.product-card__tth-separator {
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  background-image: url(../assets/icons/shared-icon/dot-grey.svg);
+}
+.product-card__price-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-end;
+  gap: 7px;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 860px) {
+  .product-card__price-container {
+    gap: 0;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+.product-card__new-price {
+  font-weight: 600;
+  font-size: 24px;
+  color: var(--black);
+  font-style: normal;
+  line-height: normal;
+}
+@media screen and (max-width: 860px) {
+  .product-card__new-price {
+    font-size: 18px;
+  }
+}
+.product-card__old-price {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 130%;
+  font-style: normal;
+  color: var(--dark-grey);
+  display: inline-block;
+  position: relative;
+}
+.product-card__old-price::after {
+  content: "";
+  position: absolute;
+  left: -1px;
+  bottom: 60%;
+  width: 100%;
+  height: 1px;
+  background: var(--dark-grey);
+  transform: rotate(-3.086deg);
+}
+@media screen and (max-width: 860px) {
+  .product-card__old-price {
+    font-size: 14px;
+  }
+}
+.product-card__old-price::after {
+  bottom: 50%;
+}
+.product-card__btn {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  max-width: 60px;
+  max-height: 60px;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 28px 28px;
+  background-color: var(--pink);
+  background-image: url(../assets/icons/shared-icon/basket-white.svg);
+}
+@media screen and (max-width: 860px) {
+  .product-card__btn {
+    max-height: 40px;
+    max-width: 40px;
+    background-size: 20px 20px;
+  }
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 0;
+  flex-wrap: wrap;
+  padding: 0 125px;
+}
+.form__title {
+  color: var(--black);
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-bottom: 20px;
+}
+.form__subtitle {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 140%;
+  font-style: normal;
+  color: var(--dark-grey);
+  margin-bottom: 40px;
+}
+.form__input-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2px;
+  flex-wrap: wrap;
+}
+.form__input-container:not(:last-child) {
+  margin-bottom: 20px;
+}
+.form__input {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 140%;
+  font-style: normal;
+  color: var(--black);
+  flex-grow: 4;
+}
+.form__input::-moz-placeholder {
+  color: var(--dark-grey);
+}
+.form__input::placeholder {
+  color: var(--dark-grey);
+}
+.form__input-block {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 6px;
+  flex-wrap: wrap;
+  position: relative;
+  max-width: 513px;
+  width: 100%;
+  padding: 17px 25px;
+  box-sizing: border-box;
+  border-radius: 15px;
+  border: 1px solid var(--pink);
+}
+.form__input-block::before {
+  content: "";
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+.form__input-block_profile::before {
+  background-image: url(../assets/icons/shared-icon/profile-icon.svg);
+}
+.form__input-block_phone::before {
+  background-image: url(../assets/icons/shared-icon/phone-icon.svg);
+}
+.form__input-err {
+  color: var(--pink);
+  font-weight: 500;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 140%;
+  padding-left: 25px;
+}
+.form__submit-line {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+  flex-wrap: wrap;
+  max-width: 513px;
+}
+.form__submit-text {
+  color: var(--dark-grey);
+  font-weight: 500;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 140%;
+  max-width: 267px;
 }
 
 .footer {
