--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,4 +10,6 @@
 @import '../blocks/section';
 @import '../blocks/service';
 @import '../blocks/popular';
+@import '../blocks/product-card';
+@import '../blocks/form';
 @import '../blocks/footer';
